fix overflow for small devices

--- a/css/base/_body.scss
+++ b/css/base/_body.scss
@@ -6,5 +6,4 @@ body {
 	margin: 0;
 	scroll-behavior: smooth;
 	font-family: Montserrat;
-	overflow: hidden;
 }
